messed some stuff up

--- a/index.html
+++ b/index.html
@@ -3,10 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="style-sheet" href="landing-style.css">
+    <link rel="stylesheet" href="landing-style.css">
     <title>Landing Page</title>
 </head>
-<body>
-    
+<body class="grid-container">
+        <header class="grid-container top-container">
+            <img class="logo" src="./images/logo.png" alt="barber shop logo">
+             <nav>
+                <a href="./../index.html">Home</a> 
+                <a href="./../about/about.html">About</a> 
+                <a href="./../gallery/gallery.html">Gallery</a> 
+                <a href="./../blogs/blogs.html">Blogs</a> 
+                <a href="./../contact/contact.html">Contact</a> 
+            </nav>
+        </header>
+        <main class="grid-container middle-container">
+            <section class=" grid-container section-one">
+                <ul class="listblock">
+                    <li class="blackandwhite">THE BEACON TO ALL MANKIND</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
+                    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit</li>
+                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit</li>
+                </ul>
+            <button a href="./../blogs/blogs.html">Read More</button>
+            </section>
+        </main>
+        <section class="grid-container section-two">
+            <div class="image-container">
+            <img src="./images/thefather.jpeg" alt="black and white photo of a bearded man">
+            <h3 class="blackandwhite">The Father</h3>
+            <img src="./images/galleryimg2.jpeg" alt="black and white headshot of a man">
+            <h3 class="blackandwhite">The Actor</h3>
+            <img src="./images/galleryimg4.jpeg" alt="">
+            <h3 class="blackandwhite">The Artist</h3>
+            </div>
+         </section>
+    <footer class="grid-container bottom-container">
+        <icon></icon>
+        <icon></icon>
+        <icon></icon>
+            <p><small>&copy; 2020 Destiny Setzer. All rights reserved.</small></p> 
+    </footer>
 </body>
 </html>
