--- a/contact/contact.html
+++ b/contact/contact.html
@@ -7,6 +7,14 @@
     <title>Contact</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+         <a href="./../index.html">Home</a> 
+         <a href="./../about/about.html">About</a> 
+         <a href="./../gallery/gallery.html">Gallery</a> 
+         <a href="./../blogs/blogs.html">Blogs</a> 
+         <a href="./../contact/contact.html">Contact</a> 
+        </nav>
+    </header>
 </body>
 </html>
