corrected grid area and added more css

--- a/index.html
+++ b/index.html
@@ -6,55 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="landing-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+        integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
     <title>Landing Page</title>
 </head>
 
-<body class="grid-container">
-    <header class="top-container">
-        <img class="logo" src="./images/barberlogo.png" alt="barber shop logo">
-        <nav class="links">
-            <a href="./../index.html">Home</a>
-            <a href="./../about/about.html">About</a>
-            <a href="./../gallery/gallery.html">Gallery</a>
-            <a href="./../blogs/blogs.html">Blogs</a>
-            <a href="./../contact/contact.html">Contact</a>
-        </nav>
-    </header>
-    <!-- <main class="grid-container middle-container"> -->
-    <section class="section-one">
-        <ul>
-            <li><h3 class="list-title">THE BEACON TO ALL MANKIND</h3></li>
-            <li>Lorem ipsum dolor sit amet conse adipisicing</li>
-            <li>Lorem ipsum dolor sit amet conse, adipisicing elit</li>
-            <li>Lorem ipsum dolor sit, amet conse adipisicing elit</li>
-        </ul>
-        <button a href="./../blogs/blogs.html">Read More</button>
-    </section>
-    <!-- </main> -->
-    <section class="section-two">
-        <div class="image-container">
-            <div class="column">
-                <img src="./images/elevate1.jpeg" alt="black and white photo of a bearded man" class="border" height="100px"
-                    width="100px">
-                <h3 class="blackandwhite">ELEVATE</h3>
+<body>
+    <div class="grid-container">
+        <div class="header">
+            <div class="logo">
+                <img src="./images/barberlogo.png" alt="barber shop logo">
             </div>
-            <div class="column">
-                <img src="./images/elevate4.jpeg" alt="black and white headshot of a man" class="border" height="100px"
-                    width="100px">
-                <h3 class="blackandwhite">YOUR</h3>
-            </div>
-            <div class="column">
-                <img src="./images/elevate7.jpeg" alt="artistic man" class="border" height="100px" width="100px">
-                <h3 class="blackandwhite">LOOK</h3>
-            </div>
+            <nav>
+                <a href="./../index.html">Home</a>
+                <a href="./../about/about.html">About</a>
+                <a href="./../gallery/gallery.html">Gallery</a>
+                <a href="./../blogs/blogs.html">Blogs</a>
+                <a href="./../contact/contact.html">Contact</a>
+            </nav>
         </div>
-    </section>
-    <footer class="bottom-container">
-        <icon></icon>
-        <icon></icon>
-        <icon></icon>
-        <p><small>&copy; 2020 Destiny Setzer. All rights reserved.</small></p>
-    </footer>
+        <!-- <main class="grid-container middle-container"> -->
+        <section class="section-one">
+            <!-- <div class="background-img"><img src="./images/elevatebackground1.jpg" alt=""></div> -->
+            <ul>
+                <li>
+                    <h3 class="list-title">THE BEACON TO ALL MANKIND</h3>
+                </li>
+                <li>Lorem ipsum dolor sit amet conse adipisicing</li>
+                <li>Lorem ipsum dolor sit amet conse, adipisicing elit</li>
+                <li>Lorem ipsum dolor sit, amet conse adipisicing elit</li>
+            </ul>
+            <button a href="./../blogs/blogs.html">Read More</button>
+        </section>
+        <!-- </main> -->
+        <section class="section-two">
+            <div class="image-container">
+                <div class="column">
+                    <a href="./gallery/gallery.html"><img src="./images/elevate1.jpeg"
+                            alt="black and white photo of a bearded man" class="border" height="200px"
+                            width="200px"></a>
+                    <h3 class="blackandwhite">ELEVATE</h3>
+                </div>
+                <div class="column">
+                    <a href="./gallery/gallery.html"><img src="./images/elevate4.jpeg"
+                            alt="black and white headshot of a man" class="border" height="200px" width="200px"></a>
+                    <h3 class="blackandwhite">YOUR</h3>
+                </div>
+                <div class="column">
+                    <a href="./gallery/gallery.html"><img src="./images/elevate7.jpeg" alt="artistic man" class="border"
+                            height="200px" width="200px"></a>
+                    <h3 class="blackandwhite">LOOK</h3>
+                </div>
+            </div>
+        </section>
+        <footer class="bottom-container">
+            <p><small>&copy; 2020 Destiny Setzer. All rights reserved.</small></p>
+            <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+            <a href="www.pinterest.com"><i class="fab fa-pinterest"></i></a>
+            <a href="www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+            <a href="www.google.com"><i class="fab fa-google-plus-g"></i></a>
+        </footer>
+    </div>
 </body>
 
 </html>
