about page initial layout

--- a/about/about.html
+++ b/about/about.html
@@ -1,21 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="style-sheet" href="about-style.css">
+    <link rel="stylesheet" href="about-style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+        integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
     <title>About</title>
 </head>
+
 <body>
-        <header>
+    <div class="grid-container">
+        <div class="header">
+            <div class="logo">
+                <img src="./../images/barberlogo.png" alt="barber shop logo">
+            </div>
             <nav>
-             <a href="./../index.html">Home</a> 
-             <a href="./../about/about.html">About</a> 
-             <a href="./../gallery/gallery.html">Gallery</a> 
-             <a href="./../blogs/blogs.html">Blogs</a> 
-             <a href="./../contact/contact.html">Contact</a> 
+                <a href="./../index.html">Home</a>
+                <a href="./../about/about.html">About</a>
+                <a href="./../gallery/gallery.html">Gallery</a>
+                <a href="./../blogs/blogs.html">Blogs</a>
+                <a href="./../contact/contact.html">Contact</a>
             </nav>
-        </header>
-    
+        </div>
+    <div class="image">
+        <img src="./../images/floralbackground2.jpeg" height="300px" width="500px">
+    </div>
+    <div class="about">
+        <p>
+        <h2>Lorem Ipsum</h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aliquid, qui et doloremque commodi quia minima, libero doloribus aliquam labore at, vitae iure. Cumque quo impedit ipsum, deleniti corrupti non.
+        </p>
+        <p>
+            <h2>Lorem Ipsum</h2>
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius sequi, ad ea cum quisquam quasi possimus voluptatem dolorum voluptate vero est neque. Modi aliquam quidem ratione quod ullam voluptas a!
+        </p>
+        <p>
+            <h2>Lorem Ipsum</h2>
+             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore officiis, error commodi necessitatibus quidem laboriosam dolor dicta impedit ducimus est, accusamus tempore non, quae pariatur id dolorem corporis incidunt fugiat.
+        </p>
+    </div>
+    <footer class="footer">
+        <p><small>&copy; 2020 Destiny Setzer. All rights reserved.</small></p>
+        <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+        <a href="www.pinterest.com"><i class="fab fa-pinterest"></i></a>
+        <a href="www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+        <a href="www.google.com"><i class="fab fa-google-plus-g"></i></a>
+    </footer>
+    </div>
 </body>
+
 </html>
