--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -1,20 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/gallery/gallery-style.css">
     <title>Gallery</title>
 </head>
+
 <body>
-    <header>
-        <nav>
-         <a href="./../index.html">Home</a> 
-         <a href="./../about/about.html">About</a> 
-         <a href="./../gallery/gallery.html">Gallery</a> 
-         <a href="./../blogs/blogs.html">Blogs</a> 
-         <a href="./../contact/contact.html">Contact</a> 
-        </nav>
-    </header>
+    <div class="grid-container">
+        <div class="header">
+            <div class="logo">
+                <img src="./images/barberlogo.png" alt="barber shop logo">
+            </div>
+            <nav>
+                <a href="./../index.html">Home</a>
+                <a href="./../about/about.html">About</a>
+                <a href="./../gallery/gallery.html">Gallery</a>
+                <a href="./../blogs/blogs.html">Blogs</a>
+                <a href="./../contact/contact.html">Contact</a>
+            </nav>
+        </div>
+        <!-- <div class="image-container"> -->
+            <div class="image-container1">
+                <div class="column">
+                    <img src="./../images/elevate10.jpeg" alt="black and white photo of a bearded man" class="border"
+                        height="300px" width="300px">
+                </div>
+                <div class="column">
+                    <img src="./../images/elevate11.jpeg" alt="black and white headshot of a man" class="border"
+                        height="300px" width="300px">
+                </div>
+                <div class="column">
+                    <img src="./../images/elevate13.jpeg" alt="artistic man" class="border" height="300px"
+                        width="300px">
+                </div>
+            </div>
+            <div class="image-container2">
+                <div class="column">
+                    <img src="./../images/elevate14.jpeg" alt="black and white photo of a bearded man" class="border"
+                        height="300px" width="300px">
+                </div>
+                <div class="column">
+                    <img src="./../images/elevate15.jpeg" alt="black and white headshot of a man" class="border"
+                        height="300px" width="300px">
+                </div>
+                <div class="column">
+                    <img src="./../images/elevate9.jpeg" alt="artistic man" class="border" height="300px" width="300px">
+                </div>
+            </div>
+            <div class="image-container3">
+                <div class="column">
+                    <img src="./../images/elevate8.jpeg" alt="black and white photo of a bearded man" class="border"
+                        height="300px" width="300px">
+                </div>
+                <div class="column">
+                    <img src="./../images/elevate7.jpeg" alt="black and white headshot of a man" class="border"
+                        height="300px" width="300px">
+                </div>
+                <div class="column">
+                    <img src="./../images/elevate6.jpeg" alt="artistic man" class="border" height="300px" width="300px">
+                </div>
+            </div>
+        <!-- </div> -->
+        <footer></footer>
+    </div>
 </body>
+
 </html>
