gallery page css

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/gallery/gallery-style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+        integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
     <title>Gallery</title>
 </head>
 
@@ -12,9 +15,9 @@
     <div class="grid-container">
         <div class="header">
             <div class="logo">
-                <img src="./images/barberlogo.png" alt="barber shop logo">
+                <img src="./../images/barberlogo.png" alt="barber shop logo">
             </div>
-            <nav>
+            <nav class="links">
                 <a href="./../index.html">Home</a>
                 <a href="./../about/about.html">About</a>
                 <a href="./../gallery/gallery.html">Gallery</a>
@@ -23,48 +26,53 @@
             </nav>
         </div>
         <!-- <div class="image-container"> -->
-            <div class="image-container1">
-                <div class="column">
-                    <img src="./../images/elevate10.jpeg" alt="black and white photo of a bearded man" class="border"
-                        height="300px" width="300px">
-                </div>
-                <div class="column">
-                    <img src="./../images/elevate11.jpeg" alt="black and white headshot of a man" class="border"
-                        height="300px" width="300px">
-                </div>
-                <div class="column">
-                    <img src="./../images/elevate13.jpeg" alt="artistic man" class="border" height="300px"
-                        width="300px">
-                </div>
+        <div class="image-container1">
+            <div class="column">
+                <img src="./../images/elevate10.jpeg" alt="black and white photo of a bearded man" class="border"
+                    height="300px" width="300px">
             </div>
-            <div class="image-container2">
-                <div class="column">
-                    <img src="./../images/elevate14.jpeg" alt="black and white photo of a bearded man" class="border"
-                        height="300px" width="300px">
-                </div>
-                <div class="column">
-                    <img src="./../images/elevate15.jpeg" alt="black and white headshot of a man" class="border"
-                        height="300px" width="300px">
-                </div>
-                <div class="column">
-                    <img src="./../images/elevate9.jpeg" alt="artistic man" class="border" height="300px" width="300px">
-                </div>
+            <div class="column">
+                <img src="./../images/elevate11.jpeg" alt="black and white headshot of a man" class="border"
+                    height="300px" width="300px">
             </div>
-            <div class="image-container3">
-                <div class="column">
-                    <img src="./../images/elevate8.jpeg" alt="black and white photo of a bearded man" class="border"
-                        height="300px" width="300px">
-                </div>
-                <div class="column">
-                    <img src="./../images/elevate7.jpeg" alt="black and white headshot of a man" class="border"
-                        height="300px" width="300px">
-                </div>
-                <div class="column">
-                    <img src="./../images/elevate6.jpeg" alt="artistic man" class="border" height="300px" width="300px">
-                </div>
+            <div class="column">
+                <img src="./../images/elevate5.jpeg" alt="artistic man" class="border" height="300px" width="300px">
             </div>
+        </div>
+        <div class="image-container2">
+            <div class="column">
+                <img src="./../images/elevate14.jpeg" alt="black and white photo of a bearded man" class="border"
+                    height="300px" width="300px">
+            </div>
+            <div class="column">
+                <img src="./../images/elevate15.jpeg" alt="black and white headshot of a man" class="border"
+                    height="300px" width="300px">
+            </div>
+            <div class="column">
+                <img src="./../images/elevate9.jpeg" alt="artistic man" class="border" height="300px" width="300px">
+            </div>
+        </div>
+        <div class="image-container3">
+            <div class="column">
+                <img src="./../images/elevate8.jpeg" alt="black and white photo of a bearded man" class="border"
+                    height="300px" width="300px">
+            </div>
+            <div class="column">
+                <img src="./../images/elevate7.jpeg" alt="black and white headshot of a man" class="border"
+                    height="300px" width="300px">
+            </div>
+            <div class="column">
+                <img src="./../images/elevate6.jpeg" alt="artistic man" class="border" height="300px" width="300px">
+            </div>
+        </div>
         <!-- </div> -->
-        <footer></footer>
+        <footer>
+            <p><small>&copy; 2020 Destiny Setzer. All rights reserved.</small></p>
+            <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+            <a href="www.pinterest.com"><i class="fab fa-pinterest"></i></a>
+            <a href="www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+            <a href="www.google.com"><i class="fab fa-google-plus-g"></i></a>
+        </footer>
     </div>
 </body>
 
