--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -1,20 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/blogs/blogs-style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+        integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
     <title>Blogs</title>
 </head>
+
 <body>
-    <header>
-        <nav>
-         <a href="./../index.html">Home</a> 
-         <a href="./../about/about.html">About</a> 
-         <a href="./../gallery/gallery.html">Gallery</a> 
-         <a href="./../blogs/blogs.html">Blogs</a> 
-         <a href="./../contact/contact.html">Contact</a> 
-        </nav>
-    </header>
+    <div class="grid-container">
+        <div class="header">
+            <div class="logo">
+                <img src="./../images/barberlogo.png" alt="barber shop logo">
+            </div>
+            <nav>
+                <a href="./../index.html">Home</a>
+                <a href="./../about/about.html">About</a>
+                <a href="./../gallery/gallery.html">Gallery</a>
+                <a href="./../blogs/blogs.html">Blogs</a>
+                <a href="./../contact/contact.html">Contact</a>
+            </nav>
+        </div>
+        <div class="blog1">
+            <img src="./../images/elevategallery22.jpeg" class="float" width="400" height="300">
+            <div class="bloginfo">
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor odit quo eaque debitis libero
+                    cumque,
+                    qui hic voluptatibus blanditiis repellendus. Lorem, ipsum dolor sit amet consectetur adipisicing
+                    elit. Nihil repellat at officiis saepe laudantium id consequatur accusamus architecto ut earum.</p>
+                <button a href="./../blogs/blogs.html">Read More</button>
+            </div>
+        </div>
+        <div class="blog2">
+            <img src="./../images/succulent.jpeg" class="float" width="400" height="300">
+            <div class="bloginfo">
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor odit quo eaque debitis libero
+                    cumque,
+                    qui hic voluptatibus blanditiis repellendus. Lorem, ipsum dolor sit amet consectetur adipisicing
+                    elit. Nihil repellat at officiis saepe laudantium id consequatur accusamus architecto ut earum.</p>
+                <button a href="./../blogs/blogs.html">Read More</button>
+            </div>
+        </div>
+        <div class="blog3">
+            <img src="./../images/elevategallery23.jpeg" class="float" width="400" height="300">
+            <div class="bloginfo">
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor odit quo eaque debitis libero
+                    cumque,
+                    qui hic voluptatibus blanditiis repellendus. Lorem, ipsum dolor sit amet consectetur adipisicing
+                    elit. Nihil repellat at officiis saepe laudantium id consequatur accusamus architecto ut earum.</p>
+                <button a href="./../blogs/blogs.html">Read More</button>
+            </div>
+        </div>
+        <footer>
+            <p><small>&copy; 2020 Destiny Setzer. All rights reserved.</small></p>
+            <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+            <a href="www.pinterest.com"><i class="fab fa-pinterest"></i></a>
+            <a href="www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+            <a href="www.google.com"><i class="fab fa-google-plus-g"></i></a>
+        </footer>
+    </div>
 </body>
+
 </html>
