contact page grid and form done

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -15,7 +15,7 @@
     <div class="div-container">
         <header>
             <div class="logo">
-                <img src="./images/barberlogo.png" alt="barber shop logo">
+                <img src="./../images/barberlogo.png" alt="barber shop logo">
             </div>
             <nav>
                 <a href="./../index.html">Home</a>
@@ -26,7 +26,15 @@
             </nav>
         </header>
         <div class="contact-form">
-                SOMETHING IN HERE
+            <h1><span>Request a Consultation</span></h1>
+		<form class="form-style">
+			<input type="text" name="fname" id="fname" value="name">
+			<input type="text" name="address" id="address" value="address">
+			<input type="text" name="email" id="email" value="email">
+			<input type="text" name="phone" id="phone" value="phone number">
+			<textarea name="message" id="message">message</textarea>
+			<input type="submit" name="send" id="send" value="send">
+		</form>
         </div>
         <footer>
             <p><small>&copy; 2020 Destiny Setzer. All rights reserved.</small></p>
