about me header image added

--- a/about/about.html
+++ b/about/about.html
@@ -26,7 +26,8 @@
             </nav>
         </div>
     <div class="image">
-        <img src="./../images/floralbackground2.jpeg" height="300px" width="500px">
+        <img src="./../images/aboutimage1.jpeg" height="250px" width="800px">
+        <div class="centered"><h1>About Us</h1></div>
     </div>
     <div class="about">
         <p>
