--- a/contact/contact.html
+++ b/contact/contact.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <div class="div-container">
-        <header>
+    <div class="grid-container">
+        <div class="header">
             <div class="logo">
                 <img src="./../images/barberlogo.png" alt="barber shop logo">
             </div>
@@ -24,16 +24,16 @@
                 <a href="./../blogs/blogs.html">Blogs</a>
                 <a href="./../contact/contact.html">Contact</a>
             </nav>
-        </header>
+        </div>
         <div class="contact-form">
             <h1><span>Request a Consultation</span></h1>
 		<form class="form-style">
-			<input type="text" name="fname" id="fname" value="name">
-			<input type="text" name="address" id="address" value="address">
-			<input type="text" name="email" id="email" value="email">
-			<input type="text" name="phone" id="phone" value="phone number">
-			<textarea name="message" id="message">message</textarea>
-			<input type="submit" name="send" id="send" value="send">
+			<input type="text" name="fname" id="fname" value="NAME">
+			<input type="text" name="address" id="address" value="ADRESS">
+			<input type="text" name="email" id="email" value="EMAIL">
+			<input type="text" name="phone" id="phone" value="PHONE NUMBER">
+			<textarea name="message" id="message">MESSAGE</textarea><br>
+			<input type="submit" class ="submit" name="send" id="send" value="SUBMIT">
 		</form>
         </div>
         <footer>
