added about media query

--- a/about/about.html
+++ b/about/about.html
@@ -26,7 +26,7 @@
             </nav>
         </div>
     <div class="image">
-        <img src="./../images/aboutimage1.jpeg" height="250px" width="800px">
+        <img src="./../images/aboutimage1.jpeg" class="responsive">
         <div class="centered"><h1>About Us</h1></div>
     </div>
     <div class="about">
