--- a/index.html
+++ b/index.html
@@ -43,18 +43,17 @@
             <div class="image-container">
                 <div class="column">
                     <a href="./gallery/gallery.html"><img src="./images/elevate1.jpeg"
-                            alt="black and white photo of a bearded man" class="border" height="200px"
-                            width="200px"></a>
+                            alt="black and white photo of a bearded man" class="border" height="auto" width="90%"></a>
                     <h3 class="blackandwhite">ELEVATE</h3>
                 </div>
                 <div class="column">
                     <a href="./gallery/gallery.html"><img src="./images/elevate4.jpeg"
-                            alt="black and white headshot of a man" class="border" height="200px" width="200px"></a>
+                            alt="black and white headshot of a man" class="border" height="auto" width="90%"></a>
                     <h3 class="blackandwhite">YOUR</h3>
                 </div>
                 <div class="column">
                     <a href="./gallery/gallery.html"><img src="./images/elevate7.jpeg" alt="artistic man" class="border"
-                            height="200px" width="200px"></a>
+                        height="auto" width="90%"></a>
                     <h3 class="blackandwhite">LOOK</h3>
                 </div>
             </div>
