media query for blog page

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -25,42 +25,42 @@
                 <a href="./../contact/contact.html">Contact</a>
             </nav>
         </div>
-            <div class="blog1">
-                <img src="./../images/elevategallery22.jpeg" class="float" width="400" height="300">
-                <div class="bloginfo">
-                    <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor odit quo eaque debitis libero
-                        cumque,
-                        qui hic voluptatibus blanditiis repellendus. Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Nihil repellat at officiis saepe laudantium id consequatur accusamus architecto ut earum.
-                    </p>
-                    <button a href="./../blogs/blogs.html">Read More</button>
-                </div>
+        <div class="blog1">
+            <img src="./../images/elevategallery22.jpeg" class="float" width="400" height="300">
+            <div class="bloginfo">
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor odit quo eaque debitis libero
+                    cumque,
+                    qui hic voluptatibus blanditiis repellendus. Lorem, ipsum dolor sit amet consectetur adipisicing
+                    elit...
+                </p>
+                <button a href="./../blogs/blogs.html">Read More</button>
             </div>
-            <div class="blog2">
-                <img src="./../images/succulent.jpeg" class="float" width="400" height="300">
-                <div class="bloginfo">
-                    <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor odit quo eaque debitis libero
-                        cumque,
-                        qui hic voluptatibus blanditiis repellendus. Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Nihil repellat at officiis saepe laudantium id consequatur accusamus architecto ut earum.
-                    </p>
-                    <button a href="./../blogs/blogs.html">Read More</button>
-                </div>
+        </div>
+        <div class="blog2">
+            <img src="./../images/succulent.jpeg" class="float" width="400" height="300">
+            <div class="bloginfo">
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor odit quo eaque debitis libero
+                    cumque,
+                    qui hic voluptatibus blanditiis repellendus. Lorem, ipsum dolor sit amet consectetur adipisicing
+                    elit...
+                </p>
+                <button a href="./../blogs/blogs.html">Read More</button>
             </div>
-            <div class="blog3">
-                <img src="./../images/elevategallery23.jpeg" class="float" width="400" height="300">
-                <div class="bloginfo">
-                    <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor odit quo eaque debitis libero
-                        cumque,
-                        qui hic voluptatibus blanditiis repellendus. Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Nihil repellat at officiis saepe laudantium id consequatur accusamus architecto ut earum.
-                    </p>
-                    <button a href="./../blogs/blogs.html">Read More</button>
-                </div>
+        </div>
+        <div class="blog3">
+            <img src="./../images/elevategallery23.jpeg" class="float" width="400" height="300">
+            <div class="bloginfo">
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor odit quo eaque debitis libero
+                    cumque,
+                    qui hic voluptatibus blanditiis repellendus. Lorem, ipsum dolor sit amet consectetur adipisicing
+                    elit...
+                </p>
+                <button a href="./../blogs/blogs.html">Read More</button>
             </div>
+        </div>
         <footer>
             <p><small>&copy; 2020 Destiny Setzer. All rights reserved.</small></p>
             <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
