--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <img src="./images/barberlogo.png" alt="barber shop logo">
             </div>
             <nav>
-                <a href="./../index.html">Home</a>
-                <a href="./../about/about.html">About</a>
-                <a href="./../gallery/gallery.html">Gallery</a>
-                <a href="./../blogs/blogs.html">Blogs</a>
-                <a href="./../contact/contact.html">Contact</a>
+                <a href="./index.html">Home</a>
+                <a href="./about/about.html">About</a>
+                <a href="./gallery/gallery.html">Gallery</a>
+                <a href="./blogs/blogs.html">Blogs</a>
+                <a href="./contact/contact.html">Contact</a>
             </nav>
         </div>
         <!-- <main class="grid-container middle-container"> -->
