cleaned up that code

--- a/about/about.html
+++ b/about/about.html
@@ -25,31 +25,37 @@
                 <a href="./../contact/contact.html">Contact</a>
             </nav>
         </div>
-    <div class="image">
-        <img src="./../images/aboutimage1.jpeg" class="responsive">
-        <div class="centered"><h1>About Us</h1></div>
-    </div>
-    <div class="about">
-        <p>
-        <h2>Lorem Ipsum</h2>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aliquid, qui et doloremque commodi quia minima, libero doloribus aliquam labore at, vitae iure. Cumque quo impedit ipsum, deleniti corrupti non.
-        </p>
-        <p>
+        <div class="image">
+            <img src="./../images/aboutimage1.jpeg" class="responsive">
+            <div class="centered">
+                <h1>About Us</h1>
+            </div>
+        </div>
+        <div class="about">
+            <p>
             <h2>Lorem Ipsum</h2>
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius sequi, ad ea cum quisquam quasi possimus voluptatem dolorum voluptate vero est neque. Modi aliquam quidem ratione quod ullam voluptas a!
-        </p>
-        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aliquid, qui et doloremque commodi quia
+            minima, libero doloribus aliquam labore at, vitae iure. Cumque quo impedit ipsum, deleniti corrupti non.
+            </p>
+            <p>
             <h2>Lorem Ipsum</h2>
-             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore officiis, error commodi necessitatibus quidem laboriosam dolor dicta impedit ducimus est, accusamus tempore non, quae pariatur id dolorem corporis incidunt fugiat.
-        </p>
-    </div>
-    <footer class="footer">
-        <p><small>&copy; 2020 Destiny Setzer. All rights reserved.</small></p>
-        <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-        <a href="www.pinterest.com"><i class="fab fa-pinterest"></i></a>
-        <a href="www.facebook.com"><i class="fab fa-facebook-f"></i></a>
-        <a href="www.google.com"><i class="fab fa-google-plus-g"></i></a>
-    </footer>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius sequi, ad ea cum quisquam quasi possimus
+            voluptatem dolorum voluptate vero est neque. Modi aliquam quidem ratione quod ullam voluptas a!
+            </p>
+            <p>
+            <h2>Lorem Ipsum</h2>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore officiis, error commodi necessitatibus
+            quidem laboriosam dolor dicta impedit ducimus est, accusamus tempore non, quae pariatur id dolorem corporis
+            incidunt fugiat.
+            </p>
+        </div>
+        <footer class="footer">
+            <p><small>&copy; 2020 Destiny Setzer. All rights reserved.</small></p>
+            <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+            <a href="www.pinterest.com"><i class="fab fa-pinterest"></i></a>
+            <a href="www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+            <a href="www.google.com"><i class="fab fa-google-plus-g"></i></a>
+        </footer>
     </div>
 </body>
 
