added a gitignore file

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -55,7 +55,7 @@
                 <h3>Lorem ipsum dolor sit.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor odit quo eaque debitis libero
                     cumque,
-                    qui hic voluptatibus blanditiis repellendus. Lorem, ipsum dolor sit amet consectetur adipisicing
+                    qui hic voluptatibus blanditi repellendus. Lorem, ipsum dolor sit amet consectetur adipisicing
                     elit...
                 </p>
                 <button a href="./../blogs/blogs.html">Read More</button>
